--- a/howler/wally_search/templates/wally/resultsmail.html
+++ b/howler/wally_search/templates/wally/resultsmail.html
@@ -38,44 +38,45 @@
         </span>
         <span style="display: none">{{ hit.meta.id }}</span>
         <div class="collapse js_popover_content">
-            {% if hit.meta.highlight.replyToEmail.0 %}
-                <p class="fragment">
-                    <b>{% trans "Hit in Reply-To Email/Name" %}:</b>
-                    <span class="search-hit">{{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}</span>
-                </p>
-            {% endif %}
+            <div class="mail_abstract_content">
+                {% if hit.meta.highlight.replyToEmail.0 %}
+                    <p class="fragment">
+                        <b>{% trans "Hit in Reply-To Email/Name" %}:</b>
+                        <span class="search-hit">{{ hit.meta.highlight.replyToEmail.0|safe }} {{ hit.meta.highlight.replyToName.0|safe }}</span>
+                    </p>
+                {% endif %}
 
-            {% if hit.meta.highlight.fromName.0 %}
-                <p class="fragment">
-                    <b>{% trans "Hit in sender name" %}:</b>
-                    <span class="search-hit">{{ hit.meta.highlight.fromName.0|safe }}</span>
-                </p>
-            {% endif %}
+                {% if hit.meta.highlight.fromName.0 %}
+                    <p class="fragment">
+                        <b>{% trans "Hit in sender name" %}:</b>
+                        <span class="search-hit">{{ hit.meta.highlight.fromName.0|safe }}</span>
+                    </p>
+                {% endif %}
 
-            {% if hit.meta.highlight.toName.0 %}
-                <p class="fragment">
-                    <b>{% trans "Hit in receiver name" %}:</b> <span class="search-hit"> hit.meta.highlight.toName.0|safe }}</span>
-                </p>
-            {% endif %}
+                {% if hit.meta.highlight.toName.0 %}
+                    <p class="fragment">
+                        <b>{% trans "Hit in receiver name" %}:</b> <span class="search-hit"> hit.meta.highlight.toName.0|safe }}</span>
+                    </p>
+                {% endif %}
 
-            {% if hit.meta.highlight.attachmentNames.0 %}
-                <p class="fragment">
-                    <b>{% trans "Hit in attachment names" %}:</b> <span
-                        class="search-hit">{{ hit.meta.highlight.attachmentNames.0|safe }}</span>
-                </p>
-            {% endif %}
+                {% if hit.meta.highlight.attachmentNames.0 %}
+                    <p class="fragment">
+                        <b>{% trans "Hit in attachment names" %}:</b> <span
+                            class="search-hit">{{ hit.meta.highlight.attachmentNames.0|safe }}</span>
+                    </p>
+                {% endif %}
 
-            {% if hit.meta.highlight.body %}
-                <b>{% trans "Hits in body" %}:</b>
-                {% for fragment in hit.meta.highlight.body %}
-                    {% comment %}<p class="fragment">{% endcomment %}
-                    <span class="search-hit">
-                                                {{ fragment|safe }} {% comment %}|linebreaks{% endcomment %}
-                                            </span>&nbsp;|&nbsp;
-                    {% comment %}</p>{% endcomment %}
-                {% endfor %}
-            {% endif %}
-
+                {% if hit.meta.highlight.body %}
+                    <b>{% trans "Hits in body" %}:</b>
+                    {% for fragment in hit.meta.highlight.body %}
+                        {% comment %}<p class="fragment">{% endcomment %}
+                        <span class="search-hit">
+                                                    {{ fragment|safe }} {% comment %}|linebreaks{% endcomment %}
+                                                </span>&nbsp;|&nbsp;
+                        {% comment %}</p>{% endcomment %}
+                    {% endfor %}
+                {% endif %}
+            </div>
             {% comment %}
                             <a href="https://co-conv.jp/go?INFO{{ hit.meta.id }}" target="_blank">{% trans "View mail content" %}</a>
 
