--- a/howler/wally_search/templates/wally/base_wally.html
+++ b/howler/wally_search/templates/wally/base_wally.html
@@ -18,4 +18,5 @@
 {% block scripts %}
     <script type="text/javascript" src='{% static 'wally/wally.js' %}'></script>
     <script type="text/javascript" src='{% static 'wally/irc.js' %}'></script>
+    <script type="text/javascript" src='{% static 'common/dt_childtoggler.js' %}'></script>
 {% endblock %}
