--- a/howler/templates/common/dt_childtoggler.html
+++ b/howler/templates/common/dt_childtoggler.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 <link rel="stylesheet" href="{% static "common/dt_childtoggler.css" %}"/>
 
+{% trans "selected value remembered" as saved_in_session_text %}
 <div class="dt_absolute_container">
     <div class="dt_middle">
         <div class="checkbox" title="{{ saved_in_session_text }}">
