--- a/howler/wally_search/static/wally/style_wally.css
+++ b/howler/wally_search/static/wally/style_wally.css
@@ -48,5 +48,6 @@ tr.shown td.details-control>span.glyphicon-plus { display:none; } /*Hide open*/
 
 /*Requirement saita 19.01.2017*/
 .mail_abstract_content{
-    padding-left:20px;
+    padding-left: 20px;
+    padding-bottom: 10px;
 }
