--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -126,7 +126,8 @@
 
             {% endblock %}
 
-            <div class="loading glyphicon collapse"></div>
+            <div id="loading" class="loading glyphicon collapse">
+            </div>
         </div>
     </div>
 </div>
@@ -144,6 +145,8 @@
 
 <script type="text/javascript" src="{% static 'datatables.net/js/jquery.dataTables.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
+
+<script type="text/javascript" src='{% static 'wally/egg.js' %}'></script>
 
 {#<script type="text/javascript" src="{% static 'datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>#}
 {#<script type="text/javascript" src="{% static 'datatables.net-responsive-bs/js/responsive.bootstrap.min.js' %}"></script>#}
