--- a/howler/wally_search/static/wally/style_wally.css
+++ b/howler/wally_search/static/wally/style_wally.css
@@ -52,6 +52,9 @@ tr.shown td.details-control>span.glyphicon-plus { display:none; } /*Hide open*/
     padding-bottom: 10px;
 }
 
+form .saved-session{
+    opacity: 0.3;
+}
 form .glyphicon-info-sign {
     cursor: pointer;
 }
