--- a/howler/wally_search/templates/wally/resultsirc.html
+++ b/howler/wally_search/templates/wally/resultsirc.html
@@ -3,7 +3,7 @@
 {% load results %}
 
 {% block col_header %}
-    <th></th>
+    <th class="no-sort"></th>
     <th class="text-nowrap">{% trans "Channel" %}</th>
     {% if day_mode %}
         <th class="text-nowrap js_datatables_hidden">dayraw</th>
