example for search usage

--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -56,7 +56,8 @@
 BU* 5509
 "BEG~1 5509"
 "(review|bug) 5509"
-大学 +(東京|京都)</pre>
+大学 +(東京|京都)
+九大 +marushin</pre>
                                 </div>
                             </div>
                         </div>
