--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-5">
                                     {% trans 'Examples:' %}
-                                    <pre>京都大学 +東京大学
+                                    <pre>京都大学 + "東京大学" + kit
 "BUG 5509"
 BU* 5509
 "BEG~1 5509"
