--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -57,7 +57,7 @@ BU* 5509
 "BEG~1 5509"
 "(review|bug) 5509"
 大学 +(東京|京都)
-九大 +marushin</pre>
+九大 +takako</pre>
                                 </div>
                             </div>
                         </div>
