show hit details new text in english/japanese

--- a/howler/templates/common/dt_childtoggler.html
+++ b/howler/templates/common/dt_childtoggler.html
@@ -8,7 +8,7 @@
         <div class="checkbox" title="{{ saved_in_session_text }}">
             <label>
                 <input type="checkbox" name="show_hits" id="js_dt_childtoggle" {% if show_hits %}
-                   checked="checked"{% endif %}/> {% trans "toggle hits shown" %}
+                   checked="checked"{% endif %}/> {% trans "show hit details" %}
             </label>
         </div>
     </div>
