--- a/howler/wally_search/templates/wally/searchirc.html
+++ b/howler/wally_search/templates/wally/searchirc.html
@@ -12,7 +12,7 @@
                    id="day_mode" {% if day_mode %}
                    checked="checked"{% endif %}/> {% trans "day mode" %}
         </label>
-        <span class="glyphicon glyphicon-cloud saved-session" title="{{ saved_in_session_text }}"></span>
+{#        <span class="glyphicon glyphicon-cloud saved-session" title="{{ saved_in_session_text }}"></span>#}
     </div>
 {% endblock %}
 
@@ -32,7 +32,7 @@
             <div class="panel-body">
                 <div class="form-group">
                     <label for="number_results">{% trans "Filter channel" %}</label>
-                    <span class="glyphicon glyphicon-cloud saved-session" title="{{ saved_in_session_text }}"></span>
+{#                    <span class="glyphicon glyphicon-cloud saved-session" title="{{ saved_in_session_text }}"></span>#}
                     <div class="input-group">
                         <select class="form-control" id="filter_channel"
                                 name="filter_channel">
