search more strict if in syntax-mode (removed common-words-search)

--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -41,6 +41,7 @@
                                         href="https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-simple-query-string-query.html#_simple_query_string_syntax">{% trans 'More info' %}</a>
 
                                     <pre>+ signifies AND operation
+- negates a single token, warning: may be very slow, especially for IRC day!
 | signifies OR operation
 " wraps a number of tokens to signify a phrase for searching
 * at the end of a term signifies a prefix query
