--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -53,6 +53,7 @@
                                 <div class="col-md-6 col-lg-5">
                                     {% trans 'Examples:' %}
                                     <pre>京都大学 + "東京大学" + kit
+ICカード -(海洋)
 "BUG 5509"
 BU* 5509
 "BEG~1 5509"
