--- a/howler/wally_search/templates/wally/searchmail.html
+++ b/howler/wally_search/templates/wally/searchmail.html
@@ -28,3 +28,19 @@
     <option value="toEmail.keyword" {% if sort_field == 'toEmail.keyword' %}
             selected="selected"{% endif %}>{% trans "Receiver" %}</option>
 {% endblock %}
+
+{% block search_form_additional %}
+    <div class="col-md-3 col-lg-2">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class='col-md-12 col-lg-12'>
+                    <div class="form-group">
+                        <label for="number_results">{% trans "Email" %}</label>
+                        <input type="text" class="form-control" name="mailq" id="mailq"
+                               placeholder="e.g. na@example.org"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
