Add Elasticsearch, fix bower versions, rem name

--- a/howler/wally_search/templates/wally/resultsmail.html
+++ b/howler/wally_search/templates/wally/resultsmail.html
@@ -27,7 +27,7 @@
     </td>
     <td>
         <span>
-            <a href="https://co-conv.jp/go?INFO{{ hit.meta.id }}" title="{% trans "View mail content" %}"
+            <a href="https://example.net/go?INFO{{ hit.meta.id }}" title="{% trans "View mail content" %}"
                target="_blank">
                 {% if hit.meta.highlight.subject.0 %}
                     {{ hit.meta.highlight.subject.0|strip_except_tags:"em" }}
