--- a/howler/wally_search/templates/wally/resultsirc.html
+++ b/howler/wally_search/templates/wally/resultsirc.html
@@ -44,7 +44,7 @@
         </td>
     {% endif %}
     <td class="text-nowrap">
-        <a href="https://admin.co-conv.jp/irc/#{{ hit.sent|date:"YmdHis" }}" title="{% trans "View IRC log day" %}"
+        <a href="https://example.net/irc/#{{ hit.sent|date:"YmdHis" }}" title="{% trans "View IRC log day" %}"
            target="_blank">
             {{ hit.sent|date:"Y/m/d H:i" }}
         </a>
