--- a/howler/wally_search/templates/wally/searchirc.html
+++ b/howler/wally_search/templates/wally/searchirc.html
@@ -37,12 +37,12 @@
                         <select class="form-control" id="filter_channel"
                                 name="filter_channel">
                             <option value=""{% if filter_channel == '' %} selected="selected"{% endif %}>{% trans "(All)" %}</option>
-                            <option value="co-conv"{% if filter_channel == 'co-conv' %} selected="selected"{% endif %}>co-conv</option>
-                            <option value="co-conv_神"{% if filter_channel == 'co-conv_神' %} selected="selected"{% endif %}>co-conv_神</option>
-                            <option value="co-conv_事務室"{% if filter_channel == 'co-conv_事務室' %} selected="selected"{% endif %}>co-conv_事務室</option>
-                            <option value="co-conv_休憩室"{% if filter_channel == 'co-conv_休憩室' %} selected="selected"{% endif %}>co-conv_休憩室</option>
+                            <option value="example"{% if filter_channel == 'example' %} selected="selected"{% endif %}>example</option>
+                            <option value="example_神"{% if filter_channel == 'example_神' %} selected="selected"{% endif %}>example_神</option>
+                            <option value="example_事務室"{% if filter_channel == 'example_事務室' %} selected="selected"{% endif %}>example_事務室</option>
+                            <option value="example_休憩室"{% if filter_channel == 'example_休憩室' %} selected="selected"{% endif %}>example_休憩室</option>
                             {% for i in "xxxxxxxxxx" %}
-                                {% with "co-conv_会議室"|addstr:forloop.counter as channel_cnt %}
+                                {% with "example_会議室"|addstr:forloop.counter as channel_cnt %}
                                     <option value="{{ channel_cnt }}"{% if filter_channel == channel_cnt %} selected="selected"{% endif %}>{{ channel_cnt }}</option>
                                 {% endwith %}
                             {% endfor %}
