--- a/howler/wally_search/templates/wally/resultsmail.html
+++ b/howler/wally_search/templates/wally/resultsmail.html
@@ -74,6 +74,11 @@
                         </span>&nbsp;|&nbsp;
                     {% endfor %}
                 {% endif %}
+
+                <!-- Temp-field to show full body -->
+                <pre>
+                    {{ hit.body }}
+                </pre>
             </div>
         </div>
     </td>
