--- a/howler/wally_search/templates/wally/searchirc.html
+++ b/howler/wally_search/templates/wally/searchirc.html
@@ -37,12 +37,12 @@
                         <select class="form-control" id="filter_channel"
                                 name="filter_channel">
                             <option value=""{% if filter_channel == '' %} selected="selected"{% endif %}>{% trans "(All)" %}</option>
-                            <option value="example"{% if filter_channel == 'example' %} selected="selected"{% endif %}>example</option>
-                            <option value="example_神"{% if filter_channel == 'example_神' %} selected="selected"{% endif %}>example_神</option>
-                            <option value="example_事務室"{% if filter_channel == 'example_事務室' %} selected="selected"{% endif %}>example_事務室</option>
-                            <option value="example_休憩室"{% if filter_channel == 'example_休憩室' %} selected="selected"{% endif %}>example_休憩室</option>
+                            <option value="channel"{% if filter_channel == 'channel' %} selected="selected"{% endif %}>channel</option>
+                            <option value="channel1"{% if filter_channel == 'channel1' %} selected="selected"{% endif %}>channel1</option>
+                            <option value="channel_友達"{% if filter_channel == 'channel_友達' %} selected="selected"{% endif %}>channel_友達</option>
+                            <option value="channel_休憩"{% if filter_channel == 'channel_休憩' %} selected="selected"{% endif %}>channel_休憩</option>
                             {% for i in "xxxxxxxxxx" %}
-                                {% with "example_会議室"|addstr:forloop.counter as channel_cnt %}
+                                {% with "channel_職場"|addstr:forloop.counter as channel_cnt %}
                                     <option value="{{ channel_cnt }}"{% if filter_channel == channel_cnt %} selected="selected"{% endif %}>{{ channel_cnt }}</option>
                                 {% endwith %}
                             {% endfor %}
